development of indent has not produced a version (through 2.2.7) which I find
useful since most of the differences I see between their respective outputs are
new bugs in the 2.x version.  And it still does not fix the bugs that I have
noticed myself in indent.  Perhaps the next maintainer of indent will know
something about regression testing -T.Dickey 2002/4/7

2002-04-23
	+ modify logic for save_com so that a comment which follows a
	  final right-parenthesis is not moved to a new line.  That keeps
	  comments from moving in this case:

	  	int main(int argc,
			 char *argv[])	/* the params */
		{
		}

	  Otherwise the comment would be moved past the left curly-brace.

	+ fix an interaction overlooked in inner_stmt that caused an
	  unnecessary newline on the closing right-parenthesis of an
	  if-statement inside the inner-statement block.

2002-04-21
	+ add inner_stmt field to parser_state struct, using this to denote
	  a statement within "({" and "})" pairs.  The corresponding logic
	  allows if-statements, etc., to be indented within the delimiters.

	+ add command-line -D option if DEBUG is defined.  This turns on parse
	  information.  Also show the lines which are read, to provide context
	  for the parse information.

	+ fix the comment for reduce() which is garbled in all of the versions
	  of GNU indent.

2002-04-14
	+ generate gperf.c and gperf-cc.c (as in 2.2.7), but align with 2.0
	  tables, to provide a known starting point.

	+ replace incorrect cast for chartype[] array indices.

	+ generate chartype[] at runtime.

	+ fake a semicolon, i.e., update state information, between ")" and an
	  immediately-following "}".  This also is needed to make xterm's
	  if_XXX macros indent properly.

	+ prevent forced newline between "({" or "})" characters, to treat
	  gcc compound statement properly as well as xterm's if_XXX macros.

	+ rewrite warnings for broken lines, showing the column and token at
	  which they break.
